--- a/gestion-tutorat-front/src/assets/i18n/en.json
+++ b/gestion-tutorat-front/src/assets/i18n/en.json
@@ -31,7 +31,24 @@
     "EMAIL": "Email",
     "PASSWORD": "Password",
     "REMEMBER_ME": "Remember me",
-    "FORGOT_PASSWORD": "Forgot password?"
+    "FORGOT_PASSWORD": "Forgot password?",
+    "LOGIN_BUTTON": "Login",
+    "LOGIN_LOADING": "Logging in...",
+    "LOGIN_WITH_CAS": "Login with CAS",
+    "NO_ACCOUNT": "Don't have an account?",
+    "SIGN_UP": "Sign up",
+    "REGISTER_TITLE": "Create an account",
+    "USERNAME": "Username",
+    "CONFIRM_PASSWORD": "Confirm password",
+    "REGISTER_BUTTON": "Create account",
+    "REGISTER_LOADING": "Creating...",
+    "PASSWORDS_DONT_MATCH": "Passwords do not match.",
+    "REGISTER_ERROR": "Error creating account",
+    "LOGIN_ERROR": "Invalid credentials",
+    "REQUIRED_FIELD": "Required field",
+    "INVALID_EMAIL": "Invalid email format",
+    "SHOW_PASSWORD": "Show password",
+    "HIDE_PASSWORD": "Hide password"
   },
   "NAVIGATION": {
     "HOME": "Home",
@@ -54,7 +71,10 @@
     "AJOUTER": "Add",
     "AJOUTER_ETUDIANT": "Add Student",
     "AJOUTER_TUTEUR": "Add Tutor",
-    "AJOUTER_MAJEURE": "Add Major"
+    "AJOUTER_MAJEURE": "Add Major",
+    "LISTE_UTILISATEURS": "List of Users",
+    "AJOUTER_UTILISATEUR": "Add User",
+    "PROFILE": "My profile"
   },
   "HOME": {
     "WELCOME": "Welcome to the tutoring management platform"
@@ -115,14 +135,14 @@
     "ELIGIBLE_TUTORAT": "Eligible Tutoring",
     "COLONNE2": "Column 2",
     "INFO_STATUT": "Status Info",
-    "PAR_TUTORAT_ALT": "By Alt Tutoring",
-    "TUTORAT_ALT_AFF": "Alt Tutoring Assigned",
+    "PAR_TUTORAT_ALT": "PAR Alt",
+    "TUTORAT_ALT_AFF": "Alt Students Assigned",
     "SOLDE_ALT": "Alt Balance",
-    "PAR_TUTORAT_INI": "By Ini Tutoring",
-    "TUTORAT_INI_AFF": "Ini Tutoring Assigned",
+    "PAR_TUTORAT_INI": "PAR Ini",
+    "TUTORAT_INI_AFF": "Ini Students Assigned",
     "SOLDE_INI": "Ini Balance",
-    "TOTAL_ETUDIANTS_PAR": "Total Students By",
-    "NB_TUTORAT_AFFECTE": "Nb Tutoring Assigned"
+    "TOTAL_ETUDIANTS_PAR": "Total Students PAR",
+    "NB_TUTORAT_AFFECTE": "Nb Students Assigned"
   },
   "MAJORS": {
     "LIST_TITLE": "List of Majors",
@@ -200,14 +220,14 @@
     "INFO_STATUS": "Status Info (optional)",
     "TUTOR_LANGUAGES": "Tutoring Languages (comma separated)",
     "PROFILE": "Profile",
-    "PAR_TUTORAT_ALT": "By Alt Tutoring",
-    "TUTORAT_ALT_AFF": "Alt Tutoring Assigned",
+    "PAR_TUTORAT_ALT": "PAR Alt",
+    "TUTORAT_ALT_AFF": "Alt Students Assigned",
     "SOLDE_ALT": "Alt Balance",
-    "PAR_TUTORAT_INI": "By Ini Tutoring",
-    "TUTORAT_INI_AFF": "Ini Tutoring Assigned",
+    "PAR_TUTORAT_INI": "PAR Ini",
+    "TUTORAT_INI_AFF": "Ini Students Assigned",
     "SOLDE_INI": "Ini Balance",
-    "TOTAL_ETUDIANTS_PAR": "Total Students By",
-    "NB_TUTORAT_AFFECTE": "Nb Tutoring Assigned",
+    "TOTAL_ETUDIANTS_PAR": "Total Students PAR",
+    "NB_TUTORAT_AFFECTE": "Nb Students Assigned",
     "SOLDE_TUTORAT_RESTANT": "Remaining Tutoring Balance",
     "MATIERES": "Subjects (comma separated)",
     "DOMAINES_EXPERTISE": "Expertise Domains (comma separated)",
@@ -276,5 +296,119 @@
     "NO_MAJOR": "No Major",
     "NO_DEPARTMENT": "No Department",
     "NO_RESULTS": "No results found for the selected filters."
+  },
+  "USER_LIST": {
+    "TITLE": "List of Users",
+    "SEARCH_TITLE": "User Search",
+    "EMAIL": "Email",
+    "ROLE": "Role",
+    "ALL_ROLES": "All roles",
+    "ROLE_ADMIN": "Administrator",
+    "ROLE_PROF": "Professor",
+    "ROLE_CONSULTATION": "Consultation",
+    "SEARCH_BTN": "Search",
+    "RESET_BTN": "Reset",
+    "NO_USER_FOUND": "No user found.",
+    "ADDED_ON": "Added on",
+    "PREVIOUS": "Previous",
+    "NEXT": "Next"
+  },
+  "USER_CREATE": {
+    "TITLE": "Create User",
+    "NAME": "Name",
+    "EMAIL": "Email",
+    "PASSWORD": "Password",
+    "ROLE": "Role",
+    "SELECT_OPTION": "-- Select --",
+    "REQUIRED": "Required field.",
+    "INVALID_EMAIL": "Invalid email format.",
+    "MIN_LENGTH": "Minimum 6 characters.",
+    "SUBMIT": "Create User"
+  },
+  "PROFILE": {
+    "TITLE": "My Profile",
+    "EDIT": "Edit",
+    "NAME": "Name",
+    "EMAIL": "Email",
+    "ROLE": "Role",
+    "MEMBER_SINCE": "Member since"
+  },
+  "USER_EDIT": {
+    "TITLE": "Edit User",
+    "NAME": "Name",
+    "EMAIL": "Email",
+    "PASSWORD": "Password",
+    "PASSWORD_PLACEHOLDER": "Leave blank to keep unchanged",
+    "ROLE": "Role",
+    "SELECT_OPTION": "-- Select --",
+    "REQUIRED": "This field is required",
+    "INVALID_EMAIL": "Invalid email",
+    "SUBMIT": "Update User"
+  },
+  "EDIT_STUDENT": {
+    "TITLE": "Edit Student",
+    "EMAIL_SCHOOL": "School Email",
+    "ORIGIN": "Origin",
+    "SCHOOL": "School",
+    "FIRSTNAME": "First Name",
+    "LASTNAME": "Last Name",
+    "INTERNATIONAL_OBLIGATION": "International Obligation",
+    "STAGE_1A": "Stage 1A",
+    "CLASS_CODE": "Class Code",
+    "GROUP_NAME": "Group Name",
+    "MAJOR_LANGUAGE": "Major Language",
+    "INI_ALT": "INI / ALT",
+    "COMPANY": "Company",
+    "APPRENTICE_FUNCTION": "Apprentice Function",
+    "LANGUAGE": "Language",
+    "ASSIGNMENT_COMMENT": "Assignment Comment",
+    "DEPARTMENT_ATTACHMENT": "Department Attachment",
+    "REQUIRED": "This field is required",
+    "INVALID_EMAIL": "Invalid email",
+    "SUBMIT": "Update Student"
+  },
+  "EDIT_TUTOR": {
+    "TITLE": "Edit Tutor",
+    "LASTNAME": "Last Name",
+    "FIRSTNAME": "First Name",
+    "EMAIL": "Email",
+    "DEPARTMENT": "Department",
+    "ELIGIBLE": "Eligible for Tutoring",
+    "STATUS": "Status",
+    "COL2": "Column 2",
+    "INFO_STATUS": "Status Info",
+    "TUTOR_LANGUAGES": "Tutoring Languages (comma separated)",
+    "PROFILE": "Profile",
+    "PAR_TUTORAT_ALT": "PAR Alt",
+    "TUTORAT_ALT_AFF": "Alt Students Assigned",
+    "SOLDE_ALT": "Alt Balance",
+    "PAR_TUTORAT_INI": "PAR Ini",
+    "TUTORAT_INI_AFF": "Ini Students Assigned",
+    "SOLDE_INI": "Ini Balance",
+    "TOTAL_ETUDIANTS_PAR": "Total Students PAR",
+    "NB_TUTORAT_AFFECTE": "Nb Students Assigned",
+    "SOLDE_TUTORAT_RESTANT": "Remaining Tutoring Balance",
+    "MATIERES": "Subjects (comma separated)",
+    "DOMAINES_EXPERTISE": "Expertise Domains (comma separated)",
+    "REQUIRED": "This field is required",
+    "INVALID_EMAIL": "Invalid email",
+    "MIN_VALUE": "Value ≥ 0",
+    "SUBMIT": "Update Tutor"
+  },
+  "EDIT_MAJOR": {
+    "TITLE": "Edit Major",
+    "CODE": "Code",
+    "GROUP_NAME": "Group Name",
+    "DEPARTMENT": "Department",
+    "RESPONSIBLE": "Responsible",
+    "LANGUAGE": "Language",
+    "SELECT_OPTION": "-- Select --",
+    "FRENCH": "French",
+    "ENGLISH": "English",
+    "FRENCH_ENGLISH": "French & English",
+    "INI_ALT": "INI / ALT",
+    "PROGRAM": "Program",
+    "REQUIRED": "This field is required",
+    "SUBMIT": "Update Major"
   }
-} 
+}
