--- a/gestion-tutorat-front/src/assets/i18n/fr.json
+++ b/gestion-tutorat-front/src/assets/i18n/fr.json
@@ -6,7 +6,7 @@
     "ENGLISH": "Anglais",
     "LOGIN": "Connexion",
     "LOGOUT": "Déconnexion",
-    "PROFILE": "Profil",
+    "PROFILE": "Mon Profil",
     "SETTINGS": "Paramètres",
     "LASTNAME": "Nom",
     "FIRSTNAME": "Prénom",
@@ -15,7 +15,7 @@
     "DEPARTMENT": "Département",
     "NOT_SPECIFIED": "Non spécifié",
     "NOT_SPECIFIED_F": "Non spécifiée",
-    "STATUS": "Statut", 
+    "STATUS": "Statut",
     "PREVIOUS": "Précédent",
     "NEXT": "Suivant",
     "STUDENT": "Étudiant",
@@ -31,7 +31,24 @@
     "EMAIL": "Email",
     "PASSWORD": "Mot de passe",
     "REMEMBER_ME": "Se souvenir de moi",
-    "FORGOT_PASSWORD": "Mot de passe oublié ?"
+    "FORGOT_PASSWORD": "Mot de passe oublié ?",
+    "LOGIN_BUTTON": "Se connecter",
+    "LOGIN_LOADING": "Connexion...",
+    "LOGIN_WITH_CAS": "Connexion avec CAS",
+    "NO_ACCOUNT": "Vous n'avez pas de compte ?",
+    "SIGN_UP": "Inscrivez-vous",
+    "REGISTER_TITLE": "Créer un compte",
+    "USERNAME": "Nom d'utilisateur",
+    "CONFIRM_PASSWORD": "Confirmer le mot de passe",
+    "REGISTER_BUTTON": "Créer un compte",
+    "REGISTER_LOADING": "Création...",
+    "PASSWORDS_DONT_MATCH": "Les mots de passe ne correspondent pas.",
+    "REGISTER_ERROR": "Erreur lors de la création du compte",
+    "LOGIN_ERROR": "Identifiants incorrects",
+    "REQUIRED_FIELD": "Champ obligatoire",
+    "INVALID_EMAIL": "Format email invalide",
+    "SHOW_PASSWORD": "Afficher le mot de passe",
+    "HIDE_PASSWORD": "Masquer le mot de passe"
   },
   "NAVIGATION": {
     "HOME": "Accueil",
@@ -54,7 +71,10 @@
     "AJOUTER": "Ajouter",
     "AJOUTER_ETUDIANT": "Ajouter Étudiant",
     "AJOUTER_TUTEUR": "Ajouter Tuteur",
-    "AJOUTER_MAJEURE": "Ajouter Majeure"
+    "AJOUTER_MAJEURE": "Ajouter Majeure",
+    "LISTE_UTILISATEURS": "Liste Utilisateurs",
+    "AJOUTER_UTILISATEUR": "Ajouter Utilisateur",
+    "PROFILE": "Mon Profil"
   },
   "HOME": {
     "WELCOME": "Bienvenue sur la plateforme de gestion du tutorat"
@@ -117,10 +137,10 @@
     "ELIGIBLE_TUTORAT": "Éligible Tutorat",
     "COLONNE2": "Colonne 2",
     "INFO_STATUT": "Info Statut",
-    "PAR_TUTORAT_ALT": "Par Tutorat Alt",
+    "PAR_TUTORAT_ALT": "Par Alt",
     "TUTORAT_ALT_AFF": "Tutorat Alt Aff",
     "SOLDE_ALT": "Solde Alt",
-    "PAR_TUTORAT_INI": "Par Tutorat Ini",
+    "PAR_TUTORAT_INI": "Par Ini",
     "TUTORAT_INI_AFF": "Tutorat Ini Aff",
     "SOLDE_INI": "Solde Ini",
     "TOTAL_ETUDIANTS_PAR": "Total Étudiants Par",
@@ -259,5 +279,119 @@
     "NO_MAJOR": "Aucune Majeure",
     "NO_DEPARTMENT": "Aucun Département",
     "NO_RESULTS": "Aucun résultat trouvé pour les filtres sélectionnés."
+  },
+  "USER_LIST": {
+    "TITLE": "Liste des utilisateurs",
+    "SEARCH_TITLE": "Recherche utilisateur",
+    "EMAIL": "Email",
+    "ROLE": "Rôle",
+    "ALL_ROLES": "Tous les rôles",
+    "ROLE_ADMIN": "Administrateur",
+    "ROLE_PROF": "Professeur",
+    "ROLE_CONSULTATION": "Consultation",
+    "SEARCH_BTN": "Rechercher",
+    "RESET_BTN": "Réinitialiser",
+    "NO_USER_FOUND": "Aucun utilisateur trouvé.",
+    "ADDED_ON": "Ajouté le",
+    "PREVIOUS": "Précédent",
+    "NEXT": "Suivant"
+  },
+  "USER_CREATE": {
+    "TITLE": "Créer un Utilisateur",
+    "NAME": "Nom",
+    "EMAIL": "Email",
+    "PASSWORD": "Mot de passe",
+    "ROLE": "Rôle",
+    "SELECT_OPTION": "-- Sélectionner --",
+    "REQUIRED": "Champ obligatoire.",
+    "INVALID_EMAIL": "Format e-mail invalide.",
+    "MIN_LENGTH": "Minimum 6 caractères.",
+    "SUBMIT": "Créer l'Utilisateur"
+  },
+  "PROFILE": {
+    "TITLE": "Mon Profil",
+    "EDIT": "Modifier",
+    "NAME": "Nom",
+    "EMAIL": "Email",
+    "ROLE": "Rôle",
+    "MEMBER_SINCE": "Membre depuis"
+  },
+  "USER_EDIT": {
+    "TITLE": "Modifier l'Utilisateur",
+    "NAME": "Nom",
+    "EMAIL": "Email",
+    "PASSWORD": "Mot de passe",
+    "PASSWORD_PLACEHOLDER": "Laisser vide pour ne pas changer",
+    "ROLE": "Rôle",
+    "SELECT_OPTION": "-- Sélectionner --",
+    "REQUIRED": "Ce champ est requis",
+    "INVALID_EMAIL": "Email invalide",
+    "SUBMIT": "Mettre à jour l'Utilisateur"
+  },
+  "EDIT_STUDENT": {
+    "TITLE": "Modifier l'Étudiant",
+    "EMAIL_SCHOOL": "Email École",
+    "ORIGIN": "Origine",
+    "SCHOOL": "École",
+    "FIRSTNAME": "Prénom",
+    "LASTNAME": "Nom",
+    "INTERNATIONAL_OBLIGATION": "Obligation Internationale",
+    "STAGE_1A": "Stage 1A",
+    "CLASS_CODE": "Code Classe",
+    "GROUP_NAME": "Nom Groupe",
+    "MAJOR_LANGUAGE": "Langue Majeure",
+    "INI_ALT": "INI / ALT",
+    "COMPANY": "Entreprise",
+    "APPRENTICE_FUNCTION": "Fonction Apprenti",
+    "LANGUAGE": "Langue",
+    "ASSIGNMENT_COMMENT": "Commentaire Affectation",
+    "DEPARTMENT_ATTACHMENT": "Département Rattachement",
+    "REQUIRED": "Ce champ est requis",
+    "INVALID_EMAIL": "Email invalide",
+    "SUBMIT": "Mettre à jour l'Étudiant"
+  },
+  "EDIT_TUTOR": {
+    "TITLE": "Modifier le Tuteur",
+    "LASTNAME": "Nom",
+    "FIRSTNAME": "Prénom",
+    "EMAIL": "Email",
+    "DEPARTMENT": "Département",
+    "ELIGIBLE": "Est Eligible pour Tutorat",
+    "STATUS": "Statut",
+    "COL2": "Colonne 2",
+    "INFO_STATUS": "Info Statut",
+    "TUTOR_LANGUAGES": "Langues Tutorats (séparées par des virgules)",
+    "PROFILE": "Profil",
+    "PAR_TUTORAT_ALT": "Par Tutorats Alt",
+    "TUTORAT_ALT_AFF": "Tutorats Alt Affectés",
+    "SOLDE_ALT": "Solde Alt",
+    "PAR_TUTORAT_INI": "Par Tutorats Ini",
+    "TUTORAT_INI_AFF": "Tutorats Ini Affectés",
+    "SOLDE_INI": "Solde Ini",
+    "TOTAL_ETUDIANTS_PAR": "Total Étudiants Par",
+    "NB_TUTORAT_AFFECTE": "Nombre de Tutorats Affectés",
+    "SOLDE_TUTORAT_RESTANT": "Solde Tutorat Restant",
+    "MATIERES": "Matières (séparées par des virgules)",
+    "DOMAINES_EXPERTISE": "Domaines Expertise (séparées par des virgules)",
+    "REQUIRED": "Ce champ est requis",
+    "INVALID_EMAIL": "Email invalide",
+    "MIN_VALUE": "Valeur ≥ 0",
+    "SUBMIT": "Mettre à jour le Tuteur"
+  },
+  "EDIT_MAJOR": {
+    "TITLE": "Modifier la Majeure",
+    "CODE": "Code",
+    "GROUP_NAME": "Nom Groupe",
+    "DEPARTMENT": "Département",
+    "RESPONSIBLE": "Responsable",
+    "LANGUAGE": "Langue",
+    "SELECT_OPTION": "-- Choisir --",
+    "FRENCH": "Français",
+    "ENGLISH": "Anglais",
+    "FRENCH_ENGLISH": "Français & Anglais",
+    "INI_ALT": "INI / ALT",
+    "PROGRAM": "Programme",
+    "REQUIRED": "Ce champ est requis",
+    "SUBMIT": "Mettre à jour la Majeure"
   }
-} 
+}
