add list tuteur-etudiant

--- a/gestion-tutorat-front/src/assets/i18n/en.json
+++ b/gestion-tutorat-front/src/assets/i18n/en.json
@@ -337,7 +337,8 @@
     "NAME": "Name",
     "EMAIL": "Email",
     "ROLE": "Role",
-    "MEMBER_SINCE": "Member since"
+    "MEMBER_SINCE": "Member since",
+    "VIEW_TUTORED_STUDENTS": "View tutored students"
   },
   "USER_EDIT": {
     "TITLE": "Edit User",
