ajout de controle d'accès

--- a/gestion-tutorat-front/src/assets/i18n/en.json
+++ b/gestion-tutorat-front/src/assets/i18n/en.json
@@ -77,7 +77,8 @@
     "LISTE_UTILISATEURS": "List of Users",
     "AJOUTER_UTILISATEUR": "Add User",
     "PROFILE": "My profile",
-    "DECONNEXION": "Logout"
+    "DECONNEXION": "Logout",
+    "DASHBOARD": "My Dashboard"
   },
   "HOME": {
     "WELCOME": "Welcome to the tutoring management platform"
