affiche tuteur éligible

--- a/gestion-tutorat-front/src/assets/i18n/en.json
+++ b/gestion-tutorat-front/src/assets/i18n/en.json
@@ -115,7 +115,9 @@
     "NEXT": "Next",
     "PAGES": "pages",
     "STUDENTS": "students",
-    "LOADING": "Loading..."
+    "LOADING": "Loading...",
+    "CHOOSE_ASSIGNMENT":"Assignment Status",
+    "CODE":"Class Code"
   },
   "TUTORS": {
     "SEARCH_TITLE": "Tutor Search",
