--- a/gestion-tutorat-front/src/assets/i18n/en.json
+++ b/gestion-tutorat-front/src/assets/i18n/en.json
@@ -81,7 +81,18 @@
     "DASHBOARD": "My Dashboard"
   },
   "HOME": {
-    "WELCOME": "Welcome to the tutoring management platform"
+    "WELCOME": "Welcome to the Tutoring Management Platform",
+    "SUBTITLE": "A complete solution for efficient tutoring management at IMT Business School",
+    "MAIN_FEATURES": "Main Features",
+    "STUDENTS_DESC": "View and manage the complete list of students, their assignments, and personal information.",
+    "TUTORS_DESC": "Access the list of tutors, their availability, and current assignments.",
+    "MAJORS_DESC": "Explore different majors and their specific characteristics.",
+    "AUTO_ASSIGN_DESC": "Use our smart algorithm to automatically assign students to tutors.",
+    "MANUAL_ASSIGN_DESC": "Perform precise manual assignments between students and tutors.",
+    "REPORTING_DESC": "Generate detailed reports and statistics on assignments and tutoring.",
+    "ACCESS_FEATURE": "Access",
+    "GET_STARTED": "Get Started",
+    "LOGIN_MESSAGE": "Log in to access all features of the tutoring management platform."
   },
   "STUDENTS": {
     "SEARCH_TITLE": "Student Search",
