--- a/gestion-tutorat-front/src/assets/i18n/fr.json
+++ b/gestion-tutorat-front/src/assets/i18n/fr.json
@@ -26,7 +26,9 @@
     "EXPORT_EXCEL": "Exporter en Excel",
     "NOT_AVAILABLE": "N/A",
     "CANCEL": "Annuler",
-    "ACTIONS": "Actions"
+    "ACTIONS": "Actions",
+    "VIEW": "Voir",
+    "DETAILS": "Détails"
   },
   "AUTH": {
     "LOGIN_TITLE": "Connexion",
