--- a/gestion-tutorat-front/src/assets/i18n/fr.json
+++ b/gestion-tutorat-front/src/assets/i18n/fr.json
@@ -59,7 +59,8 @@
     "DASHBOARD": "Tableau de bord",
     "TUTORS": "Tuteurs",
     "STUDENTS": "Étudiants",
-    "REPORTS": "Rapports"
+    "REPORTS": "Rapports",
+    "LISTS": "Listes" 
   },
   "NAV": {
     "CONNEXION": "Connexion",
