--- a/gestion-tutorat-front/src/assets/i18n/en.json
+++ b/gestion-tutorat-front/src/assets/i18n/en.json
@@ -313,7 +313,7 @@
     "CHOOSE_STATUS": "-- Choose a Status --",
     "AFFECTED": "Assigned",
     "NOT_AFFECTED": "Not Assigned",
-    "FILTER_RESULTS": "Filter Results",
+    "FILTER_RESULTS": "List of Filtered Results",
     "NO_TUTOR": "No Tutor",
     "NO_MAJOR": "No Major",
     "NO_DEPARTMENT": "No Department",
