--- a/gestion-tutorat-front/src/assets/i18n/fr.json
+++ b/gestion-tutorat-front/src/assets/i18n/fr.json
@@ -295,7 +295,7 @@
     "CHOOSE_STATUS": "-- Choisir un Statut --",
     "AFFECTED": "Affecté",
     "NOT_AFFECTED": "Non Affecté",
-    "FILTER_RESULTS": "Résultats du Filtre",
+    "FILTER_RESULTS": "Liste des Étudiants Filtrée",
     "NO_TUTOR": "Aucun Tuteur",
     "NO_MAJOR": "Aucune Majeure",
     "NO_DEPARTMENT": "Aucun Département",
